= CHANGES

== 0.9.8 (unreleased)

* Dropped compatibility with Sinatra < 1.0
* Fixed a small issue with Passenger and Ruby 1.9.1
* Removed clear_template_cache! since Sinatra 1.0. now has settings.reload_templates
* Fixed error_messages_for with custom locales
* Added "padrino gen", "padrino g" as alias of padrino-gen.
* Prevent that an account destroy itself
* Removed some unused code from padrino-admin
* Improved Padrino Admin Generator, now admin_page accepts multiple models
* Fixed Padrino Admin Account where the accounts password field is in plain text (text_field)
* Added layouts folder back into application skeleton
* Fixed an issue with not being able to render erb or haml properly in a js response
* Added support for forcing render of specified template (i.e render 'foo.haml' in js request)

== 0.9.7

* Fixed a problem with folders called "sinatra" and PADRINO_IGNORE_CALLERS
* Fixed TestTask
* Fixed admin generator since not all ruby versions respond to "lines"
* Fixed an issue in Sinatra::ShowExceptions since Bundler changes the Gem.dir
* Removed from Sinatra::ShowExceptions and clean_backtrace padrino code
* Added layout finder with format and locale
* Improved template finder (with format and locale)
* Fixed a bug that duplicates admin menus during app reloading
* Added feed_tag helper for rss / atom auto discovery
* Removed Mailer Initializer from app.rb.tt and added it to the mailer generator
* Removed duplicate app folder in project skeleton
* Couchrest generator now include in Gemfile json_pure
* Fixed project name when using some like www.my-domain.com
* Fixed a small typo error in app template
* Fixes issue with formatted routes for an index
* Fixed an issue with Riot and RR in generator
* Cleaned up the implementation for asset include helpers for javascript and css
* Added stylesheet generator. Decouples from sass from haml generation. Includes sass and less ( via rack-less)

== 0.9.6
